2008-05-24  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (g_mime_message_write_to_stream):
	Removed. Removing all deprecated functions which have equivalent
	functionality in a parent class.
	(g_mime_message_to_string): Same.

	* gmime/gmime-object.c (g_mime_object_ref): Same.
	(g_mime_object_unref): Same.

	* gmime/gmime-part.c (g_mime_part_write_to_stream): Same.
	(g_mime_part_to_string): Same.

	* gmime/gmime-stream.c (g_mime_stream_ref): Same.
	(g_mime_stream_unref): Same.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-fs.c: Cast offset arguments to lseek() to
	off_t.

	* gmime/gmime-stream-file.c: Cast offset arguments to fseek() to
	long.

	* gmime/gmime-stream-mmap.c (g_mime_stream_mmap_new_with_bounds):
	Don't assign to st.st_size.

	* gmime/*.[c,h]: Use gint64 instead of off_t for public APIs.

	* mono/gmime-api.raw: s/off_t/gint64/g

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* mono/Makefile.am: Don't delay-sign, newer versions of Mono do
	not allow this anymore.

	* mono/gmime-sharp.snk: New sign-key for signing gmime-sharp
	assembly.

	* mono/AssemblyInfo.cs.in: Updated.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* branched: now begins 2.3.x development

	* gmime-2.4.pc.in: Renamed from gmime-2.0.pc.in.

	* gmime-config.in: Removed.

	* gmimeConf.sh.in: Removed.

	* configure.in: Updated.

	* */Makefile.am: Rename lib name to gmime-2.4.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* mono/StreamWrapper.cs: Allow seeking to position 0 for
	GMimeStreamFilter. Thanks to Debajyoti Bera for this patch.

2008-05-23  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.21

	* gmime/gmime-parser.c: Check parser_step() against
	GMIME_PARSER_STATE_ERROR rather than -1 in case the value ever
	changes.
	(struct _GMimeParserPrivate): Changed state to be 16bit int
	instead of a 26bit int which apparently cannot be set to -1 on
	Solaris. Fixes bug #534301.