@@ -1025,6 +1025,14 @@ GMimeSignerStatus
 GMimeSignerTrust
 GMimeSignerError
 GMimeSigner
+g_mime_cipher_context_hash_id
+g_mime_cipher_context_hash_name
+g_mime_cipher_context_sign
+g_mime_cipher_context_verify
+g_mime_cipher_context_encrypt
+g_mime_cipher_context_decrypt
+g_mime_cipher_context_import_keys
+g_mime_cipher_context_export_keys
 g_mime_cipher_hash_id
 g_mime_cipher_hash_name
 g_mime_cipher_sign
